--- a/src/assets/css/_reset.scss
+++ b/src/assets/css/_reset.scss
@@ -38,7 +38,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-button, body{
+button, body, input{
     font-size: 14px;
     line-height: 1.8;
     color: $gray-66;
