--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -6,7 +6,7 @@
     z-index: 2000;
     background: white;
     height: 80px;
-    box-shadow: 0 0 5px rgba(0,0,0,.2);
+    // box-shadow: 0 0 5px rgba(0,0,0,.2);
     .logo{
         margin-top: (80px - 72px) / 2;
         img{
